Bug Fix of overlapping and add percentage

--- a/test_1/custom_weapon_bar.css
+++ b/test_1/custom_weapon_bar.css
@@ -2,3 +2,7 @@
 
     background-color:rgb(241, 38, 2);
 }
+
+.dynamic_element{
+    
+}
